fix: text overflows (#83)

--- a/src/components/dialogs/common/dialog-title/dialog-title.css
+++ b/src/components/dialogs/common/dialog-title/dialog-title.css
@@ -2,4 +2,5 @@
   margin: 0;
   font-size: 1rem;
   font-weight: bold;
+  overflow-wrap: break-word;
 }
